--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "eslint-plugin-react-hooks": "~4.1.0",
     "history": "4.10.1",
     "husky": "~5.1.3",
+    "husky-run": "0.0.0",
     "jest-canvas-mock": "~2.3.0",
     "jest-environment-jsdom-sixteen": "~1.0.3",
     "lint-staged": "~10.5.0",
