--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,10 @@
     "skipLibCheck": true,
     "noEmit": true,
     "isolatedModules": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "src/@types"
+    ]
   }
 }
