--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@testing-library/react-hooks": "~7.0.0",
     "@testing-library/user-event": "~12.8.3",
     "@types/jest": "~27.0.3",
-    "@types/lodash": "^4.14.150",
+    "@types/lodash": "~4.14.182",
     "@types/node": "~17.0.0",
     "@types/pouchdb": "~6.4.0",
     "@types/react": "~17.0.0",
