--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/escape-string-regexp": "~2.0.1",
     "@types/json2csv": "~5.0.1",
     "@types/pouchdb-find": "~6.3.4",
+    "@types/lodash": "4.14.182",
     "bootstrap": "~5.1.0",
     "date-fns": "~2.28.0",
     "escape-string-regexp": "~4.0.0",
@@ -17,7 +18,6 @@
     "i18next-browser-languagedetector": "~6.1.0",
     "i18next-xhr-backend": "~3.2.2",
     "json2csv": "~5.0.1",
-    "lodash": "^4.14.182",
     "node-sass": "~7.0.0",
     "pouchdb": "~7.2.1",
     "pouchdb-adapter-memory": "~7.2.1",
@@ -69,7 +69,7 @@
     "@testing-library/react-hooks": "~7.0.0",
     "@testing-library/user-event": "~12.8.3",
     "@types/jest": "~27.0.3",
-    "@types/lodash": "~4.14.182",
+    "@types/lodash": "4.14.182",
     "@types/node": "~17.0.0",
     "@types/pouchdb": "~6.4.0",
     "@types/react": "~17.0.0",
