--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "~21.6.0",
     "i18next-browser-languagedetector": "~6.1.0",
     "i18next-xhr-backend": "~3.2.2",
+    "install": "~0.13.0",
     "json2csv": "~5.0.1",
     "lodash": "^4.17.15",
     "node-sass": "~7.0.0",
@@ -70,7 +71,7 @@
     "@testing-library/user-event": "~12.8.3",
     "@types/jest": "~27.0.3",
     "@types/lodash": "^4.14.150",
-    "@types/node": "~17.0.0",
+    "@types/node": "~15.6.1",
     "@types/pouchdb": "~6.4.0",
     "@types/react": "~17.0.0",
     "@types/react-dom": "~17.0.0",
@@ -83,7 +84,7 @@
     "@types/validator": "~13.7.0",
     "@typescript-eslint/eslint-plugin": "~3.10.0",
     "@typescript-eslint/parser": "~3.10.0",
-    "chalk": "^5.0.0",
+    "chalk": "~4.1.2",
     "commitizen": "~4.2.0",
     "commitlint-config-cz": "~0.13.0",
     "cross-env": "~7.0.0",
