--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json2csv": "~5.0.1",
     "node-sass": "~7.0.0",
     "pouchdb": "~7.2.1",
+    "lodash": "4.14.182",
     "pouchdb-adapter-memory": "~7.2.1",
     "pouchdb-authentication": "~1.1.3",
     "pouchdb-find": "~7.2.1",
