--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "i18next": "~21.6.0",
     "i18next-browser-languagedetector": "~6.1.0",
     "i18next-xhr-backend": "~3.2.2",
+    "install": "~0.13.0",
     "json2csv": "~5.0.1",
-    "lodash": "^4.17.15",
     "node-sass": "~7.0.0",
     "pouchdb": "~7.2.1",
+    "lodash": "4.17.15",
     "pouchdb-adapter-memory": "~7.2.1",
     "pouchdb-authentication": "~1.1.3",
     "pouchdb-find": "~7.2.1",
@@ -69,13 +70,13 @@
     "@testing-library/react-hooks": "~7.0.0",
     "@testing-library/user-event": "~12.8.3",
     "@types/jest": "~27.0.3",
-    "@types/lodash": "^4.14.150",
+    "@types/lodash": "4.14.182",
     "@types/node": "~15.6.1",
     "@types/pouchdb": "~6.4.0",
     "@types/react": "~17.0.0",
     "@types/react-dom": "~17.0.0",
     "@types/react-redux": "~7.1.5",
-    "@types/react-router": "5.1.18",
+    "@types/react-router": "~5.1.2",
     "@types/react-router-dom": "~5.3.0",
     "@types/redux-mock-store": "~1.0.1",
     "@types/shortid": "^0.0.29",
