--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "~11.10.4",
+    "@emotion/styled": "~11.10.4",
     "@hospitalrun/components": "~3.4.0",
+    "@mui/icons-material": "~5.10.6",
+    "@mui/material": "~5.10.6",
     "@reduxjs/toolkit": "~1.7.0",
     "@types/escape-string-regexp": "~2.0.1",
     "@types/json2csv": "~5.0.1",
@@ -39,7 +43,8 @@
     "redux-thunk": "~2.4.0",
     "relational-pouch": "~4.0.0",
     "shortid": "^2.2.15",
-    "typescript": "~3.8.3",
+    "tslib": "~2.4.0",
+    "typescript": "~4.8.3",
     "uuid": "^8.0.0",
     "validator": "^13.0.0"
   },
@@ -75,7 +80,7 @@
     "@types/react": "~17.0.0",
     "@types/react-dom": "~17.0.0",
     "@types/react-redux": "~7.1.5",
-    "@types/react-router": "~5.1.2",
+    "@types/react-router": "~5.1.19",
     "@types/react-router-dom": "~5.3.0",
     "@types/redux-mock-store": "~1.0.1",
     "@types/shortid": "^0.0.29",
@@ -116,7 +121,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "commit": "npx git-cz",
-    "start": "npm run translation:check && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "update": "npx npm-check -u",
     "prepublishOnly": "npm run build",
