--- a/package.json
+++ b/package.json
@@ -5,164 +5,170 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
-    "@hospitalrun/components": "~3.4.0",
-    "@reduxjs/toolkit": "~1.7.0",
-    "@types/escape-string-regexp": "~2.0.1",
-    "@types/json2csv": "~5.0.1",
-    "@types/pouchdb-find": "~6.3.4",
-    "bootstrap": "~5.1.0",
-    "date-fns": "~2.28.0",
-    "escape-string-regexp": "~4.0.0",
-    "i18next": "~21.6.0",
-    "i18next-browser-languagedetector": "~6.1.0",
-    "i18next-xhr-backend": "~3.2.2",
-    "json2csv": "~5.0.1",
-    "lodash": "^4.17.15",
-    "node-sass": "~7.0.0",
-    "pouchdb": "~7.2.1",
-    "pouchdb-adapter-memory": "~7.2.1",
-    "pouchdb-authentication": "~1.1.3",
-    "pouchdb-find": "~7.2.1",
-    "pouchdb-quick-search": "~1.3.0",
-    "react": "~17.0.1",
-    "react-bootstrap": "~1.6.0",
-    "react-bootstrap-typeahead": "~5.2.0",
-    "react-dom": "~16.13.0",
-    "react-i18next": "~11.15.0",
-    "react-query": "~2.25.2",
-    "react-query-devtools": "~2.6.0",
-    "react-redux": "~7.2.0",
-    "react-router": "~5.2.0",
-    "react-router-dom": "~5.3.0",
-    "react-scripts": "~3.4.0",
-    "redux": "~4.1.0",
-    "redux-thunk": "~2.4.0",
-    "relational-pouch": "~4.0.0",
-    "shortid": "^2.2.15",
-    "typescript": "~3.8.3",
-    "uuid": "^8.0.0",
-    "validator": "^13.0.0"
+      "@hospitalrun/components": "~3.4.0",
+      "@reduxjs/toolkit": "~1.7.0",
+      "@types/escape-string-regexp": "~2.0.1",
+      "@types/json2csv": "~5.0.1",
+      "@types/pouchdb-find": "~6.3.4",
+      "axios": "~0.27.2",
+      "bootstrap": "~5.1.0",
+      "cors": "~2.8.5",
+      "date-fns": "~2.28.0",
+      "dotenv": "~16.0.2",
+      "escape-string-regexp": "~4.0.0",
+      "i18next": "~21.6.0",
+      "i18next-browser-languagedetector": "~6.1.0",
+      "i18next-xhr-backend": "~3.2.2",
+      "json2csv": "~5.0.1",
+      "lodash": "^4.17.15",
+      "moment": "~2.29.4",
+      "node-sass": "~7.0.0",
+      "pouchdb": "~7.2.1",
+      "pouchdb-adapter-memory": "~7.2.1",
+      "pouchdb-authentication": "~1.1.3",
+      "pouchdb-find": "~7.2.1",
+      "pouchdb-quick-search": "~1.3.0",
+      "react": "~17.0.1",
+      "react-bootstrap": "~1.6.0",
+      "react-bootstrap-typeahead": "~5.2.0",
+      "react-dom": "~16.13.0",
+      "react-i18next": "~11.15.0",
+      "react-moment": "~1.1.2",
+      "react-query": "~2.25.2",
+      "react-query-devtools": "~2.6.0",
+      "react-redux": "~7.2.0",
+      "react-router": "~5.2.0",
+      "react-router-dom": "~5.3.0",
+      "react-scripts": "~3.4.0",
+      "redux": "~4.1.0",
+      "redux-thunk": "~2.4.0",
+      "relational-pouch": "~4.0.0",
+      "shortid": "^2.2.15",
+      "tslib": "~2.4.0",
+      "typescript": "~4.8.3",
+      "uuid": "^8.0.0",
+      "validator": "^13.0.0"
   },
   "resolutions": {
-    "moment": "2.24.0"
+      "moment": "2.24.0"
   },
   "comments": {
-    "resolutions": "Added this key as temp fix https://github.com/moment/moment/issues/5484"
+      "resolutions": "Added this key as temp fix https://github.com/moment/moment/issues/5484"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/HospitalRun/hospitalrun-frontend.git"
+      "type": "git",
+      "url": "https://github.com/HospitalRun/hospitalrun-frontend.git"
   },
   "author": "Jack Meyer",
   "contributors": [
-    "Maksim Sinik",
-    "Stefano Casasola"
+      "Maksim Sinik",
+      "Stefano Casasola"
   ],
   "devDependencies": {
-    "@commitlint/cli": "~16.1.0",
-    "@commitlint/config-conventional": "~16.0.0",
-    "@commitlint/core": "~16.0.0",
-    "@commitlint/prompt": "~16.1.0",
-    "@testing-library/dom": "~7.31.0",
-    "@testing-library/jest-dom": "~5.16.1",
-    "@testing-library/react": "~11.2.2",
-    "@testing-library/react-hooks": "~7.0.0",
-    "@testing-library/user-event": "~12.8.3",
-    "@types/jest": "~27.0.3",
-    "@types/lodash": "^4.14.150",
-    "@types/node": "~17.0.0",
-    "@types/pouchdb": "~6.4.0",
-    "@types/react": "~17.0.0",
-    "@types/react-dom": "~17.0.0",
-    "@types/react-redux": "~7.1.5",
-    "@types/react-router": "~5.1.2",
-    "@types/react-router-dom": "~5.3.0",
-    "@types/redux-mock-store": "~1.0.1",
-    "@types/shortid": "^0.0.29",
-    "@types/uuid": "^8.0.0",
-    "@types/validator": "~13.7.0",
-    "@typescript-eslint/eslint-plugin": "~3.10.0",
-    "@typescript-eslint/parser": "~3.10.0",
-    "chalk": "^5.0.0",
-    "commitizen": "~4.2.0",
-    "commitlint-config-cz": "~0.13.0",
-    "cross-env": "~7.0.0",
-    "cz-conventional-changelog": "~3.3.0",
-    "dateformat": "~5.0.2",
-    "eslint": "~6.8.0",
-    "eslint-config-airbnb": "~18.2.0",
-    "eslint-config-prettier": "~7.2.0",
-    "eslint-import-resolver-typescript": "~2.5.0",
-    "eslint-plugin-import": "~2.25.1",
-    "eslint-plugin-jest": "~26.1.0",
-    "eslint-plugin-jsx-a11y": "~6.5.1",
-    "eslint-plugin-prettier": "~3.4.0",
-    "eslint-plugin-react": "~7.28.0",
-    "eslint-plugin-react-hooks": "~4.3.0",
-    "history": "4.10.1",
-    "husky": "~7.0.0",
-    "jest-canvas-mock": "~2.3.0",
-    "jest-environment-jsdom-sixteen": "~2.0.0",
-    "lint-staged": "~12.3.3",
-    "memdown": "~6.1.0",
-    "prettier": "~2.2.0",
-    "react-select-event": "~5.3.0",
-    "react-test-renderer": "~17.0.1",
-    "redux-mock-store": "~1.5.4",
-    "rimraf": "~3.0.2",
-    "source-map-explorer": "^2.2.2",
-    "standard-version": "~9.3.0"
+      "@commitlint/cli": "~16.1.0",
+      "@commitlint/config-conventional": "~16.0.0",
+      "@commitlint/core": "~16.0.0",
+      "@commitlint/prompt": "~16.1.0",
+      "@testing-library/dom": "~7.31.0",
+      "@testing-library/jest-dom": "~5.16.1",
+      "@testing-library/react": "~11.2.2",
+      "@testing-library/react-hooks": "~7.0.0",
+      "@testing-library/user-event": "~12.8.3",
+      "@types/jest": "~27.0.3",
+      "@types/lodash": "^4.14.150",
+      "@types/node": "~17.0.0",
+      "@types/pouchdb": "~6.4.0",
+      "@types/react": "~17.0.0",
+      "@types/react-dom": "~17.0.0",
+      "@types/react-redux": "~7.1.5",
+      "@types/react-router": "~5.1.19",
+      "@types/react-router-dom": "~5.3.0",
+      "@types/redux-mock-store": "~1.0.1",
+      "@types/shortid": "^0.0.29",
+      "@types/uuid": "^8.0.0",
+      "@types/validator": "~13.7.0",
+      "@typescript-eslint/eslint-plugin": "~3.10.0",
+      "@typescript-eslint/parser": "~3.10.0",
+      "chalk": "^5.0.0",
+      "commitizen": "~4.2.0",
+      "commitlint-config-cz": "~0.13.0",
+      "cross-env": "~7.0.0",
+      "cz-conventional-changelog": "~3.3.0",
+      "dateformat": "~5.0.2",
+      "eslint": "~6.8.0",
+      "eslint-config-airbnb": "~18.2.0",
+      "eslint-config-prettier": "~7.2.0",
+      "eslint-import-resolver-typescript": "~2.5.0",
+      "eslint-plugin-import": "~2.25.1",
+      "eslint-plugin-jest": "~26.1.0",
+      "eslint-plugin-jsx-a11y": "~6.5.1",
+      "eslint-plugin-prettier": "~3.4.0",
+      "eslint-plugin-react": "~7.28.0",
+      "eslint-plugin-react-hooks": "~4.3.0",
+      "history": "4.10.1",
+      "husky": "~7.0.0",
+      "jest-canvas-mock": "~2.3.0",
+      "jest-environment-jsdom-sixteen": "~2.0.0",
+      "lint-staged": "~12.3.3",
+      "memdown": "~6.1.0",
+      "prettier": "~2.2.0",
+      "react-select-event": "~5.3.0",
+      "react-test-renderer": "~17.0.1",
+      "redux-mock-store": "~1.5.4",
+      "rimraf": "~3.0.2",
+      "source-map-explorer": "^2.2.2",
+      "standard-version": "~9.3.0"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "commit": "npx git-cz",
-    "start": "npm run translation:check && react-scripts start",
-    "build": "react-scripts build",
-    "update": "npx npm-check -u",
-    "prepublishOnly": "npm run build",
-    "test": "npm run translation:check && react-scripts test  --testPathIgnorePatterns=src/__tests__/test-utils --env=jest-environment-jsdom-sixteen",
-    "test:ci": "cross-env CI=true react-scripts test  --testPathIgnorePatterns=src/__tests__/test-utils --passWithNoTests --env=jest-environment-jsdom-sixteen --maxWorkers=2",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" \"scripts/check-translations/**/*.{js,ts}\"",
-    "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" \"scripts/check-translations/**/*.{js,ts}\" --fix",
-    "lint-staged": "lint-staged",
-    "commitlint": "commitlint",
-    "coveralls": "npm run test:ci -- --coverage --watchAll=false && cat ./coverage/lcov.info",
-    "remove-compiled-translations": "rimraf ./bin/scripts/check-translations",
-    "pretranslation:check": "npm run remove-compiled-translations",
-    "translation:check": "tsc -p scripts/tsconfig.json && node ./bin/scripts/check-translations/index.js",
-    "posttranslation:check": "npm run remove-compiled-translations"
+      "analyze": "source-map-explorer 'build/static/js/*.js'",
+      "commit": "npx git-cz",
+      "start": "react-scripts --openssl-legacy-provider start",
+      "build": "react-scripts build",
+      "update": "npx npm-check -u",
+      "prepublishOnly": "npm run build",
+      "test": "npm run translation:check && react-scripts test  --testPathIgnorePatterns=src/__tests__/test-utils --env=jest-environment-jsdom-sixteen",
+      "test:ci": "cross-env CI=true react-scripts test  --testPathIgnorePatterns=src/__tests__/test-utils --passWithNoTests --env=jest-environment-jsdom-sixteen --maxWorkers=2",
+      "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" \"scripts/check-translations/**/*.{js,ts}\"",
+      "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" \"scripts/check-translations/**/*.{js,ts}\" --fix",
+      "lint-staged": "lint-staged",
+      "commitlint": "commitlint",
+      "coveralls": "npm run test:ci -- --coverage --watchAll=false && cat ./coverage/lcov.info",
+      "remove-compiled-translations": "rimraf ./bin/scripts/check-translations",
+      "pretranslation:check": "npm run remove-compiled-translations",
+      "translation:check": "tsc -p scripts/tsconfig.json && node ./bin/scripts/check-translations/index.js",
+      "posttranslation:check": "npm run remove-compiled-translations"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+      "production": [
+          ">0.2%",
+          "not dead",
+          "not op_mini all"
+      ],
+      "development": [
+          "last 1 chrome version",
+          "last 1 firefox version",
+          "last 1 safari version"
+      ]
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged",
-      "commit-msg": "npm run commitlint -- -E HUSKY_GIT_PARAMS"
-    }
+      "hooks": {
+          "pre-commit": "npm run lint-staged",
+          "commit-msg": "npm run commitlint -- -E HUSKY_GIT_PARAMS"
+      }
   },
   "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+      "commitizen": {
+          "path": "./node_modules/cz-conventional-changelog"
+      }
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "npm run lint:fix",
-      "npm run test:ci",
-      "git add ."
-    ]
+      "**/*.{js,jsx,ts,tsx}": [
+          "npm run lint:fix",
+          "npm run test:ci",
+          "git add ."
+      ]
   },
   "jest": {
-    "restoreMocks": true
+      "restoreMocks": true
   }
 }
